added thank you message html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cdc49ed55f.js" crossorigin="anonymous"></script>
     <title>Organic | Juno College Project One</title>
     <link href="../styles/style.css" rel="stylesheet">
 </head>
@@ -28,6 +29,14 @@
             <div class="modalLinks">
                 <a href="#">Terms & Conditions</a>
                 <a href="#">Privacy Policy</a>
+            </div>
+        </div>
+        <div class="modalContainerAfterSubmit">
+            <i class="fa-solid fa-xmark closeModal"></i>
+            <div class="modalAfterSubmitText">
+                <p>You're in!</p>
+                <p>From now on, you'll be the first to know about sales and new arrivals!</p>
+                <p>Check your email for 15% off your first order.</p>
             </div>
         </div>
     </div>
