updated close modal 2 class name

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="modalContainerAfterSubmit">
-            <i class="fa-solid fa-xmark closeModal"></i>
+            <i class="fa-solid fa-xmark closeModal2"></i>
             <div class="modalAfterSubmitText">
                 <p>You're in!</p>
                 <p>From now on, you'll be the first to know about sales and new arrivals!</p>
