commented sections for clarity

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             </div>
         </div>
     </div>
+    <!-- popup modal -->
+
     <!-- beginning of header section -->
     <header>
         <nav class="flexRow">
@@ -90,6 +92,8 @@
             </div>
         </div>
     </header>
+
+    <!-- mobile nav -->
     <nav class="mobileNav">
         <ul>
             <li>
@@ -103,6 +107,9 @@
             </li>
         </ul>
     </nav>
+    <!-- mobile nav -->
+
+    <!-- cart app -->
     <div class="reviewCart flexColumn">
         <div class="cartTop">
             <i class="fa-solid fa-xmark closeCart"></i>
@@ -126,8 +133,11 @@
             <button class="checkoutBtn">Go to Checkout</button>
         </div>
     </div>
+    <!-- cart app -->
+
     <!-- end of header section -->
 
+    
     <!-- beginning of main section -->
     <main>
         <!-- beginning of about section -->
