--- a/contact.html
+++ b/contact.html
@@ -21,22 +21,72 @@
                 </a>
                 <ul class="flexRow">
                     <li class="navHover navHide">
-                        <a href="./index.html">Home</a>
+                        <a class="active" href="./index.html">Home</a>
                     </li>
                     <li class="navHover navHide">
-                        <a href="./index.html#blog">Blog</a>
+                        <a href="#blog">Blog</a>
                     </li>
                     <li class="navHover navHide">
-                        <a class="active" href="./contact.html">Contact</a>
+                        <a href="./contact.html">Contact</a>
                     </li>
-                    <li>
-                        <img class="svg" src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
+                    <li class="wishList">
+                        <i class="fa-regular fa-heart wishListIcon"></i>
+                    </li>
+                    <li class="cart">
+                        <img class="svg" src="./assets/icons/bag.png" alt="Oreg shopping cart.">
+                        <div class="cartItemNumber">0</div>
                     </li>
                 </ul>
+                <button class="hamburger">
+                    <div class="bar"></div>
+                </button>
             </div>
         </nav>
+
+            <!-- mobile nav -->
+        <nav class="mobileNav">
+            <ul>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#blog">Blog</a>
+                </li>
+                <li>
+                    <a href="./contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- mobile nav -->
+
+        <!-- cart app -->
+        <div class="reviewCart flexColumn">
+            <div class="cartTop">
+                <i class="fa-solid fa-xmark closeCart"></i>
+                <p class="yourCart">Your Cart</p>
+                <div class="cartMessages">
+                    <p class="noItemsInCart">There are no items in your cart.</p>
+                    <a href="#shop" class="continueShopping">Continue Shopping</a>
+                </div>
+                <ul class="orderItems"></ul>
+            </div>
+            <div class="moneyTings">
+                <div class="subTotal">
+                    <p>Sub-Total (<span class="totalItems">0</span> items): $<span class="subTotalPrice">0.00</span></p>
+                </div>
+                <div class="tax">
+                    <p>Total Tax (HST 13%): $<span class="totalTaxPrice">0.00</span></p>
+                </div>
+                <div class="finalTotal">
+                    <p>Final Total: $<span class="finalTotalPrice">0.00</span></p>
+                </div>
+                <button class="checkoutBtn">Go to Checkout</button>
+            </div>
+        </div>
+        <!-- cart app -->
         <div class="contactBanner"></div>
-        <h2>Contact Us</h2>    
+        <h2>Contact Us</h2>   
+         
     </header>
     <!-- end of header section -->
 
@@ -200,6 +250,8 @@
         <p class="copyright">Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
     </footer>
     <!-- end of footer section -->
-    <script src="./script.js"></script>
+
+     <script src="./products.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
