added active class to contact link in nav

--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@
                 </a>
                 <ul class="flexRow">
                     <li class="navHover navHide">
-                        <a class="active" href="./index.html">Home</a>
+                        <a href="./index.html">Home</a>
                     </li>
                     <li class="navHover navHide">
                         <a href="#blog">Blog</a>
                     </li>
                     <li class="navHover navHide">
-                        <a href="./contact.html">Contact</a>
+                        <a class="active" href="./contact.html">Contact</a>
                     </li>
                     <li class="wishList">
                         <i class="fa-regular fa-heart wishListIcon"></i>
