--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">        
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/cdc49ed55f.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cdc49ed55f.js" crossorigin="anonymous"></script>
     <title>Organic | Juno College Project One</title>
     <link href="./styles/style.css" rel="stylesheet">
 </head>
@@ -24,7 +24,7 @@
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="navHover navHide">
-                        <a href="#blog">Blog</a>
+                        <a href="./index.html#blog">Blog</a>
                     </li>
                     <li class="navHover navHide">
                         <a class="active" href="./contact.html">Contact</a>
@@ -50,7 +50,7 @@
                     <a href="./index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#blog">Blog</a>
+                    <a href="./index.html#blog">Blog</a>
                 </li>
                 <li>
                     <a href="./contact.html">Contact</a>
@@ -62,7 +62,7 @@
         <!-- cart app -->
         <div class="reviewCart flexColumn">
             <div class="cartTop">
-                <i class="fa-solid fa-xmark closeCart"></i>
+                <i class="fa-solid fa-xmark closeCart" ></i>
                 <p class="yourCart">Your Cart</p>
                 <div class="cartMessages">
                     <p class="noItemsInCart">There are no items in your cart.</p>
@@ -251,7 +251,9 @@
     </footer>
     <!-- end of footer section -->
 
-     <script src="./products.js"></script>
+    <script src="./products.js"></script>
     <script src="./app.js"></script>
+    
+    
 </body>
 </html>
