added required property for modal email

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>Save on your first order and stay in the know with the latest products and weekly promotions.</p>
             <form>
                 <label for="modalEmail"></label>
-                <input type="text" id="modalEmail" name="modalEmail" placeholder="Enter your email...">
+                <input type="text" id="modalEmail" name="modalEmail" placeholder="Enter your email..." required>
                 <span id="modalErrorMsg"></span>
                 <button type="submit" class="modalBtn">Unlock 15%</button>
             </form>
