--- a/index.html
+++ b/index.html
@@ -383,8 +383,7 @@
     </footer>
     <!-- end of footer section -->
 
-    <script src="./products.js"></script>
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
 
 </body>
 </html>
