--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     </li>
                     <li>
                         <img class="svg cartIcon" src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
+                        <div class="totalItemsInCart">
+                            <!--append here-->
+                        </div>
                     </li>
                 </ul>
                 <a class="hamburgerContainer" href="#">
