updated class names for empty cart and full cart

--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
         </div>
         <div class="cartApp">
             <p class="closeCart">X</p>
-            <div class="emptyCartStuff">
+            <div class="emptyCart">
                 <p class="emptyMsg">Your cart is empty</p>
                 <a class="continueShopping" href="#shop">Continue Shopping</a>
             </div>
-            <div class="notEmptyCartStuff">
+            <div class="fullCart">
                 <ul class="productsInCart">
                    <!--render the cart items here dynamically-->
                 </ul>
+                <p>Sub-Total:<span class="subTotal"></span></p>
                 <button>Check out</button>
             </div>
         </div>
