added elements to cart

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
                 <a class="continueShopping" href="#shop">Continue Shopping</a>
             </div>
             <div class="fullCart">
+                <p>Your cart</p>
+                <p class="clearTheCart">Clear your cart.</p>
                 <ul class="productsInCart">
                    <!--render the cart items here dynamically-->
                 </ul>
-                <p>Sub-Total:<span class="subTotal"></span></p>
+                <p>Sub-Total: $<span class="subTotal"></span></p>
                 <button>Check out</button>
             </div>
         </div>
