added classes to cart app

--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
                 <a class="continueShopping" href="#shop">Continue Shopping</a>
             </div>
             <div class="fullCart">
-                <p>Your cart</p>
-                <p class="clearTheCart">Clear your cart.</p>
+                <p class="yourCart">Your cart</p>
+                <p class="clearTheCart">Clear all items</p>
                 <ul class="productsInCart">
                    <!--render the cart items here dynamically-->
                 </ul>
-                <p>Sub-Total: $<span class="subTotal"></span></p>
-                <button>Check out</button>
+                <div class="checkoutContainer">
+                    <p>Sub-Total: $<span class="subTotal"></span></p>
+                    <button class="checkoutBtn">Checkout Now</button>
+                </div>
             </div>
         </div>
     </header>
