--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
             </div>
         </div>
         <div class="cartApp">
-            <p class="closeCart">X</p>
+            <i class="fa-solid fa-xmark closeCart"></i>
             <div class="emptyCart">
-                <p class="emptyMsg">Your cart is empty</p>
+                <p class="emptyMsg">Your cart is empty.</p>
                 <a class="continueShopping" href="#shop">Continue Shopping</a>
             </div>
             <div class="fullCart">
                 <p class="yourCart">Your cart</p>
-                <p class="clearTheCart">Clear all items</p>
                 <ul class="productsInCart">
                    <!--render the cart items here dynamically-->
                 </ul>
+                <p class="clearTheCart">Clear all items</p>
                 <div class="checkoutContainer">
                     <p>Sub-Total: $<span class="subTotal"></span></p>
                     <button class="checkoutBtn">Checkout Now</button>
