add tax and total price html elements

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                 <p class="clearTheCart">Clear all items</p>
                 <div class="checkoutContainer">
                     <p>Sub-Total: $<span class="subTotal"></span></p>
+                    <p>Tax (13% HST): $<span class="totalTax"></span></p>
+                    <p>Total: $<span class="totalPrice"></span></p>
                     <button class="checkoutBtn">Checkout Now</button>
                 </div>
             </div>
